[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "roms-bathy-smooth"
version = "1.0.0"
description = "ROMS bathymetry smoothing via Linear Programming and iterative methods"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "netCDF4",
]

[project.optional-dependencies]
plot = ["matplotlib"]

[tool.setuptools.packages.find]
include = ["roms_bathy_smooth*"]
